0.0704 2020-06-25
  - rename SPVM::Builder::Config::set_no_cache to set_force_compile
  - rename SPVM::Builder::Config::get_no_cache to get_force_compile
  - add native source dependency cache system
  - remove SPVM::Builder::quiet method
  - SPVM::Builder::Config quiet field default become 1
0.0703 2020-06-24
  - fixed broken test by using different perl version
0.0702 2020-06-24
  - add document of SPVM::Builder::Config::add_extra_compiler_flags
  - add document of SPVM::Builder::Config::add_extra_linker_flags
  - add document of SPVM::Builder::Config::set_extra_compiler_flags
  - add document of SPVM::Builder::Config::get_extra_compiler_flags
  - add document of SPVM::Builder::Config::set_extra_linker_flags
  - add document of SPVM::Builder::Config::get_extra_linker_flags
  - add SPVM::Builder::Config::set_include_dirs
  - add SPVM::Builder::Config::get_include_dirs
  - add SPVM::Builder::Config::add_include_dirs
  - add set_no_cache and get_no_cache
  - remove set_cache and get_cache
  - Support native source code and include files
    
    Foo.native/include
    Foo.native/src
  - Improve native include file and source file compile condition
  
0.0701 2020-02-19
  - add SPVM::NDArray::Byte
  - add SPVM::NDArray::Short
  - add SPVM::NDArray::Int
  - add SPVM::NDArray::Long
  - add SPVM::NDArray::Float
  - add SPVM::NDArray::Double
  - add SPVM::NDArray::String
  - fix module load bug
  - change SPVM::Complex_2x(x is b, s, i, l, f, and d) field name re to x, im to y, 
  - add SPVM::Quaternion_4x((x is b, s, i, l, f, and d).
  - add SPVM::NDArray::ComplexX(X is Byte, Short, Int, Long, Float, Double)
  - add SPVM::NDArray::QuaternionX(X is Byte, Short, Int, Long, Float, Double)
  - remove complex operation(+, -, * , /)
  - don't load SPVM::Complex_2f, SPVM::Complex_2d by default
  - remove complex function in SPVM::Util
0.07 2020-01-30
  - remove fileno, set_binmode methods because file nomber is not portable.
  - add warn and print empty string and undef spec